# WebZjs

./: .gitignore  .prettierrc.js  .vercelignore  .yarnrc.yml  Cargo.toml  LICENSE-MIT  PCZT_ERROR_TEST_PLAN.md  README.md  add-worker-module.sh  build.sh  docker-compose.yml  dynamic.yml  justfile  netlify.toml  package-lock.json  package.json  pnpm-lock.yaml  rust-toolchain.toml  traefik.yml  vercel.json  webdriver.json
.cargo/: config.toml
.github/actions/install-rust-toolchain/: action.yml
.github/workflows/: check-snap-allowed-origins.yml  check-snap-manifest.yml  deploy-demo.yml  deploy-docs.yml  e2e-tests.yml  rust-checks.yml  tests.yml  web-tests.yml
crates/webz-common/: Cargo.toml
crates/webz-common/src/: error.rs  lib.rs  pczt.rs
crates/webz-keys/: Cargo.toml
crates/webz-keys/src/: error.rs  keys.rs  lib.rs  pczt_sign.rs
crates/webz-requests/: Cargo.toml
crates/webz-requests/src/: error.rs  lib.rs
crates/webz-wallet/: Cargo.toml
crates/webz-wallet/src/: error.rs  init.rs  lib.rs  wallet.rs
crates/webz-wallet/src/bindgen/: mod.rs  pczt.rs  proposal.rs  wallet.rs
crates/webzjs-common/: Cargo.toml
crates/webzjs-common/src/: network.rs
crates/webzjs-keys/: Cargo.toml
crates/webzjs-keys/src/: error.rs  keys.rs  pczt_sign.rs
crates/webzjs-requests/: Cargo.toml
crates/webzjs-requests/src/: error.rs  requests.rs
crates/webzjs-wallet/: Cargo.toml
crates/webzjs-wallet/src/: error.rs  lib.rs  validation.rs  wallet.rs
crates/webzjs-wallet/src/bindgen/: mod.rs  proposal.rs  transaction_history.rs  wallet.rs
demo-wallet/: package.json
demo-wallet/src/: index.js
demo-wallet/src/app/: App.js
demo-wallet/src/app/components/: ImportAccount.js  ReceiveFunds.js
docs/: README.md  docusaurus.config.js  package-lock.json  package.json  tsconfig.json
docs/docs/: intro.md
docs/src/pages/: index.js
examples/: batchrunner.rs  message-board-sync.rs  simple-sync.rs
scripts/: add_license.sh  copyright.txt
src/: account.rs  error.rs  extended_transparent.rs  init.rs  lib.rs  memwallet.rs  mocks.rs  network.rs  store.rs  sync.rs  traits.rs  transaction_proposal.rs  transaction_record.rs  transaction_request.rs  utils.rs  wallet.rs
src/bindgen/: keys.rs  mod.rs  proposal.rs  transaction_proposal.rs  tx_requests.rs  wallet.rs
src/memwallet/: wallet_commitment_trees.rs  wallet_input_source.rs  wallet_read.rs  wallet_write.rs
src/mocks/: mod.rs  utils.rs
src/notes/: interface.rs  mod.rs  nullifier.rs  orchard.rs  sapling.rs  transparent.rs
src/proto/: compact_formats.rs  service.rs
src/store/: indexed_db_store.rs  injected_store.rs  memory_store.rs  mod.rs  wallet_store.rs
src/sync3/: mod.rs
src/wallet/: capability.rs  extended_transparent.rs  memory_transaction_store.rs  mod.rs  traits.rs  transaction_record.rs
src/wallet/notes/: interface.rs  mod.rs  nullifier.rs  orchard.rs  query.rs  sapling.rs  transparent.rs
tests/: batchrunner.rs  indexed_db_store.rs  message-board-sync.rs  simple-sync-and-send.rs  tests.rs  web_accounts.rs
traefik/: docker-compose.yml
