[workspace]
resolver = "2"

members = [
    "crates/webz-common",
    "crates/webz-keys",
    "crates/webz-requests",
    "crates/webz-wallet",
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3
lto = true
codegen-units = 1

[workspace.dependencies]
## Web dependencies
wasm-bindgen = "=0.2.93" # higher versions has an issues with attachment of the file: webz-wallet/snippets/wasm-bindgen-rayon-3e04391371ad0a8e/src/workerHelpers.worker.js
js-sys = "0.3.70"
wasm-bindgen-futures = "0.4.43"
web-sys = { version = "0.3.70", features = [
    "console",
] }
wasm-bindgen-rayon = { version = "=1.2.1" } # Update to higher version cause playwright test in chtomium fail

# WASM specific dependencies
tracing-web = { version = "0.1.3" }
console_error_panic_hook = { version = "0.1.7" }
tonic-web-wasm-client = "0.6.0"
tokio_with_wasm = { version = "0.7.1", features = ["rt", "rt-multi-thread", "sync", "macros", "time"] }

## Zcash dependencies

zcash_keys = { git = "https://github.com/ChainSafe/librustzcash", rev = "dcd2c3aa03af46fb6f07956d9894041b6d5dc81b", features = ["transparent-inputs", "orchard", "sapling", "unstable"] }
zcash_client_backend = { git = "https://github.com/ChainSafe/librustzcash", rev = "dcd2c3aa03af46fb6f07956d9894041b6d5dc81b", default-features = false, features = ["sync", "lightwalletd-tonic", "wasm-bindgen", "orchard"] }
zcash_client_memory = { git = "https://github.com/ChainSafe/librustzcash", rev = "dcd2c3aa03af46fb6f07956d9894041b6d5dc81b", features = ["orchard"] }
zcash_primitives = { git = "https://github.com/ChainSafe/librustzcash", rev = "dcd2c3aa03af46fb6f07956d9894041b6d5dc81b" }
zcash_address = { git = "https://github.com/ChainSafe/librustzcash", rev = "dcd2c3aa03af46fb6f07956d9894041b6d5dc81b" }
zcash_proofs = { git = "https://github.com/ChainSafe/librustzcash", rev = "dcd2c3aa03af46fb6f07956d9894041b6d5dc81b", default-features = false, features = ["bundled-prover", "multicore"] }
zip321 = { git = "https://github.com/ChainSafe/librustzcash", rev = "dcd2c3aa03af46fb6f07956d9894041b6d5dc81b" }
zcash_protocol = { git = "https://github.com/ChainSafe/librustzcash", rev = "dcd2c3aa03af46fb6f07956d9894041b6d5dc81b", default-features = false }


## gRPC Web dependencies
prost = { version = "0.12", default-features = false }
tonic = { version = "0.12", default-features = false, features = [
    "prost",
] }


# Used in Native tests
zcash_client_sqlite = { git = "https://github.com/ChainSafe/librustzcash", rev = "dcd2c3aa03af46fb6f07956d9894041b6d5dc81b", default-features = false, features = ["unstable", "orchard"] }

getrandom = { version = "0.2", features = ["js"] }
thiserror = "1.0.63"
indexed_db_futures = "0.5.0"
sha2 = "0.10"
ripemd = "0.1"
bip0039 = "0.12.0"
secrecy = "0.8.0"
futures-util = "0.3.30"
nonempty = "0.11"
hex = "0.4.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
rayon = { version = "1.8", features = ["web_spin_lock"] }
subtle = "2.6.1"
wasm_thread = { git = "https://github.com/ec2/wasm_thread", rev = "9e432077948d927d49373d1d039c23447d3648df", default-features = false, features = ["keep_worker_alive", "es_modules"] }

wasm_sync = "0.1.2"
http = { version = "1.1.0", default-features = false }
serde = { version = "1", features = ["derive"], default-features = false }
postcard = { version = "1.0.10", features = ["alloc"] }
serde-wasm-bindgen = "0.6.5"

wasm-bindgen-test = "0.3.43"
tempfile = "3.12"
# Used in Native tests
tokio = { version = "1.0", features = ["rt", "macros"] }
byte-unit = { version = "5.1.4", features = ["byte"] }


[patch.crates-io]
# See: https://github.com/zcash/librustzcash/pull/1661
orchard = { git = "https://github.com/zcash/orchard.git", rev = "cd3e0901ccac2c630dd7fd03eb496d5030c1bbfe" }

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(wasm_bindgen)', 'cfg(wasm_bindgen_unstable_test_coverage)'] }

[patch.'https://github.com/chainsafe/librustzcash']
zcash_address = { path = "../librustzcash/components/zcash_address" }
zcash_client_backend = { path = "../librustzcash/zcash_client_backend" }
zcash_client_sqlite = { path = "../librustzcash/zcash_client_sqlite" }
zcash_client_memory = { path = "../librustzcash/zcash_client_memory" }
zcash_keys = { path = "../librustzcash/zcash_keys" }
zcash_primitives = { path = "../librustzcash/zcash_primitives" }
zcash_proofs = { path = "../librustzcash/zcash_proofs" }
zcash_protocol = { path = "../librustzcash/components/zcash_protocol" }