[workspace]
resolver = "2"

members = [
    "crates/webzjs-common",
    "crates/webzjs-keys",
    "crates/webzjs-requests",
    "crates/webzjs-wallet",
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3
lto = true
codegen-units = 1

[workspace.dependencies]
## Web dependencies
wasm-bindgen = "=0.2.100" # PINNED: 0.2.108+ has TextEncoder.encodeInto issues with MetaMask Snap sandbox
js-sys = "=0.3.77"
wasm-bindgen-futures = "=0.4.50"
web-sys = { version = "=0.3.77", features = [
    "console",
] }
wasm-bindgen-rayon = { version = "1.3" } # Update to higher version cause playwright test in chtomium fail

# WASM specific dependencies
tracing-web = { version = "0.1.3" }
console_error_panic_hook = { version = "0.1.7" }
tonic-web-wasm-client = "0.8.0"
tokio_with_wasm = { version = "0.7.1", features = ["rt", "rt-multi-thread", "sync", "macros", "time"] }

## Zcash dependencies - Using sqhell/librustzcash fork with NU6.1 fixes
zcash_keys = { git = "https://github.com/sqhell/librustzcash", branch = "feat/snap-nu61", features = ["transparent-inputs", "orchard", "sapling", "unstable"] }
zcash_client_backend = { git = "https://github.com/sqhell/librustzcash", branch = "feat/snap-nu61", default-features = false, features = ["sync", "lightwalletd-tonic", "orchard"] }
zcash_client_memory = { git = "https://github.com/sqhell/librustzcash", branch = "feat/snap-nu61", features = ["orchard", "transparent-inputs"] }
zcash_primitives = { git = "https://github.com/sqhell/librustzcash", branch = "feat/snap-nu61" }
zcash_transparent = { git = "https://github.com/sqhell/librustzcash", branch = "feat/snap-nu61", default-features = false }
zcash_address = { git = "https://github.com/sqhell/librustzcash", branch = "feat/snap-nu61" }
zcash_proofs = { git = "https://github.com/sqhell/librustzcash", branch = "feat/snap-nu61", default-features = false, features = ["bundled-prover", "multicore"] }
zip321 = { git = "https://github.com/sqhell/librustzcash", branch = "feat/snap-nu61" }
zip32 = { version = "0.2" }
zcash_protocol = { git = "https://github.com/sqhell/librustzcash", branch = "feat/snap-nu61", default-features = false }
pczt = { git = "https://github.com/sqhell/librustzcash", branch = "feat/snap-nu61", default-features = false, features = ["orchard", "sapling", "transparent"] }
sapling = { package = "sapling-crypto", version = "0.6", default-features = false }
bip32 = { version = "=0.6.0-pre.1", default-features = false, features = ["alloc"] }
## gRPC Web dependencies
prost = { version = "0.14", default-features = false }
tonic = { version = "0.14", default-features = false }


# Used in Native tests
zcash_client_sqlite = { git = "https://github.com/sqhell/librustzcash", branch = "feat/snap-nu61", default-features = false, features = ["unstable", "orchard"] }

getrandom = { version = "0.2", features = ["js"] }
thiserror = "1.0.63"
indexed_db_futures = "0.5.0"
sha2 = "0.10"
ripemd = "0.1"
bip0039 = "0.12.0"
secrecy = "0.8.0"
futures-util = "0.3.30"
nonempty = "0.11"
hex = "0.4.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
rayon = { version = "1.8", features = ["web_spin_lock"] }
subtle = "2.6.1"
wasm_thread = { git = "https://github.com/ec2/wasm_thread", rev = "9e432077948d927d49373d1d039c23447d3648df", default-features = false, features = ["keep_worker_alive", "es_modules"] }

wasm_sync = "0.1.2"
http = { version = "1.1.0", default-features = false }
serde = { version = "1", features = ["derive"], default-features = false }
postcard = { version = "1.0.10", features = ["alloc"] }
serde-wasm-bindgen = "0.6.5"

wasm-bindgen-test = "=0.3.50"
tempfile = "3.12"
# Used in Native tests
tokio = { version = "1.0", features = ["rt", "macros"] }
byte-unit = { version = "5.1.4", features = ["byte"] }


[patch.crates-io]
# Also patching for pczt improvments
# See: https://github.com/zcash/librustzcash/pull/1661
# orchard = { git = "https://github.com/zcash/orchard.git", rev = "4fa6d3b549f8803016a309281404eab095d04de8" }
# sapling = { package = "sapling-crypto", git = "https://github.com/zcash/sapling-crypto.git", rev = "3c2235747553da642fb142d1eeb9b1afa8391987" }

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(wasm_bindgen)', 'cfg(wasm_bindgen_unstable_test_coverage)'] }

# Local fork paths configured above in workspace.dependencies