[package]
name = "webz-keys"
version = "0.1.0"
authors = ["ChainSafe Systems"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ChainSafe/WebZjs"
description = "A browser client-side library for generating and manipulating zcash keys"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "-O4"]

[dependencies]
webz-common = { path = "../webz-common" }

js-sys.workspace = true
thiserror.workspace = true
wasm-bindgen.workspace = true
zcash_primitives.workspace = true
zcash_keys.workspace = true
bip0039.workspace = true

# fixes "failed to resolve: use of undeclared crate or module `imp`" error
getrandom = { version = "0.2", features = ["js"] }

[lints]
workspace = true