[package]
name = "webz-wallet"
version = "0.1.0"
authors = ["ChainSafe Systems"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ChainSafe/WebZjs"
description = "A browser client-side library for implementing Zcash wallets"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "-O4"]

[features]
default = ["native", "multicore"]

multicore = ["zcash_proofs/multicore", "zcash_primitives/multicore", "zcash_client_memory/multicore"]


# WASM specific features
wasm = ["console_error_panic_hook", "dep:tracing-web", "zcash_client_backend/wasm-bindgen"]
wasm-parallel = ["wasm", "wasm-bindgen-rayon", "multicore"]
native = ["tonic/channel", "tonic/gzip", "tonic/tls-webpki-roots", "tokio/macros", "tokio/rt", "tokio/rt-multi-thread"]
sqlite-db = ["dep:zcash_client_sqlite"]
console_error_panic_hook = ["dep:console_error_panic_hook"]
no-bundler = ["wasm-bindgen-rayon?/no-bundler", "wasm_thread/no-bundler"]

[dependencies]
webz-common = { path = "../webz-common" }

## Web dependencies
wasm-bindgen.workspace = true
js-sys.workspace = true
web-sys.workspace = true

wasm-bindgen-futures = "0.4.43"
wasm-bindgen-rayon = { version = "1.2.1", optional = true }

# WASM specific dependencies
tracing-web = { version = "0.1.3", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
tonic-web-wasm-client = "0.6.0"
tokio_with_wasm = { version = "0.7.1", features = ["rt", "rt-multi-thread", "sync", "macros", "time"] }

## Zcash dependencies

zcash_keys = { workspace = true, features = ["transparent-inputs", "orchard", "sapling", "unstable"] }
zcash_client_backend = { workspace = true, default-features = false, features = ["sync", "lightwalletd-tonic", "wasm-bindgen", "orchard"] }
zcash_client_memory = { workspace = true, features = ["orchard"] }
zcash_primitives = { workspace = true }
zcash_address = { workspace = true }
zcash_proofs = { workspace = true, default-features = false, features = ["bundled-prover", "multicore"] }
zip321 = { workspace = true }


## gRPC Web dependencies
prost = { version = "0.12", default-features = false }
tonic = { version = "0.12", default-features = false, features = [
    "prost",
] }


# Used in Native tests
tokio.workspace = true
zcash_client_sqlite = { git = "https://github.com/ChainSafe/librustzcash", rev = "9673cc2859e8a2528d1efd3c74795363f87ddf8f", default-features = false, features = ["unstable", "orchard"], optional = true }

getrandom = { version = "0.2", features = ["js"] }
thiserror.workspace = true
indexed_db_futures = "0.5.0"
sha2 = "0.10"
ripemd = "0.1"
bip0039 = "0.12.0"
secrecy = "0.8.0"
futures-util = "0.3.30"
nonempty = "0.7"
hex = "0.4.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
rayon = { version = "1.8", features = ["web_spin_lock"] }
subtle = "2.6.1"
wasm_thread = { git = "https://github.com/ec2/wasm_thread", rev = "9e432077948d927d49373d1d039c23447d3648df", default-features = false, features = ["keep_worker_alive", "es_modules"] }

wasm_sync = "0.1.2"
http = { version = "1.1.0", default-features = false }
serde.workspace = true
postcard = { version = "1.0.10", features = ["alloc"] }
serde-wasm-bindgen.workspace = true