[package]
name = "webzjs-common"
version = "0.1.0"
authors = ["ChainSafe Systems"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ChainSafe/WebZjs"
description = "A browser client-side library for generating and manipulating zcash keys"
edition = "2021"

[dependencies]
serde.workspace = true
zcash_primitives.workspace = true
zcash_address.workspace = true
zcash_protocol.workspace = true
thiserror.workspace = true
wasm-bindgen.workspace = true
js-sys.workspace = true
pczt = { workspace = true, default-features = false, features = ["orchard", "sapling", "transparent"] }
serde-wasm-bindgen.workspace = true


[lints]
workspace = true