[package]
name = "webzjs-keys"
version = "0.1.0"
authors = ["ChainSafe Systems"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ChainSafe/WebZjs"
description = "A browser client-side library for generating and manipulating zcash keys"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "-O4"]

[dependencies]
webzjs-common = { path = "../webzjs-common" }

js-sys.workspace = true
thiserror.workspace = true
wasm-bindgen.workspace = true
zcash_primitives = { workspace = true, features = ["transparent-inputs"] }
zcash_keys.workspace = true
zcash_protocol.workspace = true
bip0039.workspace = true
zip32.workspace = true
zcash_transparent.workspace = true
sapling = { workspace = true }
bip32.workspace = true
pczt = { workspace = true, default-features = false, features = [
    "signer",
    "orchard",
    "sapling",
    "transparent",
    "tx-extractor",
] }
orchard = { version = "0.11", default-features = false }
wasm-bindgen-futures = "0.4.43"

# fixes "failed to resolve: use of undeclared crate or module `imp`" error
getrandom = { workspace = true, features = ["js"] }

[lints]
workspace = true
